--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,14 @@
-services:
-  backend:
-    build: ./backend
-    ports:
-      - "5000:5000"
+version: '3.8'
 
+services:
   frontend:
     build: ./frontend
+    ports:
+      - "5000:5000"
     depends_on:
       - backend
 
+  backend:
+    build: ./backend
+    ports:
+      - "5001:5010"
