--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,17 @@
 version: '3.8'
 
 services:
-  web:
-    build: .
+  backend:
+    build: ./backend
     ports:
       - "5000:5000"
 
-    volumes:
-      - ./backend:/app
+  frontend:
+    build: ./frontend
+    ports:
+      - "8080:80"
+
+    depends_on: 
+      - backend
+     
     
