--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version:3.10
 
-    - name: Build Frontend Docker image
-      run: docker build -t frontend ./frontend
+    - name: Install Dependencies
+        run: |
+          cd backend
+          pip install -r requirements.txt
 
-    - name: Build Backend Docker image
-      run: docker build -t backend ./backend
+      - name: Test Docker Build
+        run: docker-compose build
