--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,2 +1,13 @@
-FROM nginx:alpine
-COPY index.html /usr/share/nginx/html/index.html
+FROM python:3.10-slim
+
+WORKDIR /app
+
+COPY requirements.txt .
+
+RUN pip install -r requirements.txt 
+
+COPY . . 
+
+EXPOSE 5000
+
+CMD ["python", "app.py"]
