--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,15 +14,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version:3.10
-
-    - name: Install Dependencies
-        run: |
-          cd backend
-          pip install -r requirements.txt
-
-      - name: Test Docker Build
+    - name: Build containers
         run: docker-compose build
+
+    - name: Run containers
+        run: docker-compose up -d
+
+    - name: Test backend
+        run: curl --fail http://localhost:5000/api/data || exit 1
+
+    - name: Test frontend
+        run: curl --fail http://localhost:8081 || exit 1
+
